--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="text-center p-5 mb-4 bg-light">
-      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+      <h1 class="display-4">forget-me-NOTES <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
